--- a/src/global.css
+++ b/src/global.css
@@ -1,14 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
-* {
+*, ::after, ::before {
+  border: 0;
   margin: 0;
   padding: 0;
   outline: 0;
   box-sizing: border-box;
 }
 
-body {
-  font: 400 14px Roboto, sans-serif;
-  background: #F0F0F5;
+*::-webkit-scrollbar {
+  width: 6px !important;
+  height: 6px !important;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.9);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+:not(font) {
+  font-family: Roboto, sans-serif;
+}
+
+body, html {
+  background-color: #FAFAFA;
   -webkit-font-smoothing: antialiased;
+  word-wrap: break-word;
+  height: 100%;
+  color: rgba(0, 0, 0, .87);
 }
